--- a/css/scss/_contato.scss
+++ b/css/scss/_contato.scss
@@ -8,10 +8,10 @@
   padding: 40px 0; /* espaçamento de 40px encima e em embaixo*/
 }
 .contato h2 {
-  color: #fec63e;
+  color: $cor-primary;
 }
 .contato h2::after {
-  background: #fec63e;
+  background: $cor-primary;
 }
 .contato_form {
   padding-right: 60px; /*Ter uma distancia de a direita de 60px do outro bloco  */
@@ -19,33 +19,29 @@
 .contato_form label {
   display: block; /*quebras a label em blocos e ficar uma embaixo da outra*/
   color: #000;
-  font-family: Georgia, "Times New Roman", serif;
-  font-size: 18px;
-  line-height: 25px; /* Distancia de uma linha para outra*/
   margin-bottom: 2px;
+  @include type-1(18);
 }
 .contato_form input {
   display: block;
   width: 100%; /* pergar 100% da nossa caixa */
-  border: 4px solid #fec63e; /* A borda da nossa caixa*/
+  border: 4px solid $cor-primary; /* A borda da nossa caixa*/
   background: none; /* tirar o fundo da caixa e ficar transparente*/
   padding: 7px 5px; /* aumentar o padding dentro da caixa*/
   margin-bottom: 10px; /* distancia de uma caixa para outra*/
   outline: none; /* tirar linha de marcação em volta quando escreve*/
-  font-size: 14px;
-  font-family: Georgia, "Times New Roman", serif;
+  @include type-1(14);
 }
 .contato_form textarea {
   display: block;
   width: 100%;
   height: 120px; /* largura da caixa*/
-  border: 4px solid #fec63e;
+  border: 4px solid $cor-primary;
   background: none;
   padding: 7px 5px;
   margin-bottom: 20px;
   outline: none;
-  font-size: 14px;
-  font-family: Georgia, "Times New Roman", serif;
+  @include type-1(14);
 }
 .contato_form button {
   background: none;
@@ -53,17 +49,15 @@
 }
 
 .contato_dados h3 {
-  font-size: 18px;
-  line-height: 25px;
+  @include type-1(18);
   text-transform: uppercase; /* Trasformar tudo em maisculo*/
-  color: #fec63e;
+  color: $cor-primary;
   font-weight: bold; /* Deixa em negrito*/
 }
 .contato_dados span {
   display: block; /* tirar inline e colocar em bloco*/
-  font-size: 18px;
+  @include type-1(18);
   line-height: 30px;
-  font-family: Georgia, "Times New Roman", serif;
 }
 .contato_dados span:nth-last-of-type(odd) {
   margin-bottom: 30px;
@@ -77,7 +71,7 @@
   margin-right: 10px;
 }
 .contato_dados ul li a {
-  border: 3px solid #fec63e;
+  border: 3px solid $cor-primary;
   display: block;
   padding: 6px;
 }
