--- a/css/scss/_produtos.scss
+++ b/css/scss/_produtos.scss
@@ -7,8 +7,8 @@
 }
 
 .produto-item h2 {
-  color: #fff;
-  font-size: 36px;
+  color: $cor-secundary-2;
+  @include type-1(36);
   text-transform: uppercase;
   letter-spacing: 0.1em;
   font-weight: bold;
@@ -23,7 +23,7 @@
   display: block;
   width: 60px;
   height: 3px;
-  background: #fff;
+  background: $cor-secundary-2;
   margin: 6px auto;
 }
 .produto-icone {
@@ -37,17 +37,15 @@
   background: #000;
 }
 .produto-info p {
-  color: #fff;
-  font-size: 18px;
-  line-height: 25px;
+  color: $cor-secundary-2;
+  @include type-1(18);
   padding: 40px 40px;
   height: 180px;
 }
 .produto-info ul li {
-  background: #fec63e;
+  background: $cor-primary;
   text-transform: uppercase;
-  font-size: 18px;
-  line-height: 20px;
+  @include type-1(18);
   font-weight: bold;
   float: left;
   width: 229px;
@@ -71,66 +69,60 @@
   padding: 40px 0; /* espaçamento de 40px encima e em embaixo*/
 }
 .orcamento h2 {
-  color: #fec63e;
+  color: $cor-primary;
 }
 .orcamento h2::after {
-  background: #fec63e;
+  background: $cor-primary;
 }
 .form {
   padding-right: 60px; /*Ter uma distancia de a direita de 60px do outro bloco  */
 }
 .form label {
   display: block; /*quebras a label em blocos e ficar uma embaixo da outra*/
-  color: #fff;
-  font-family: Georgia, "Times New Roman", serif;
-  font-size: 18px;
-  line-height: 25px; /* Distancia de uma linha para outra*/
+  color: $cor-secundary-2;
   margin-bottom: 2px;
+  @include type-1(18);
 }
 .form input {
   display: block;
   width: 100%; /* pergar 100% da nossa caixa */
-  border: 4px solid #fec63e; /* A borda da nossa caixa*/
+  border: 4px solid $cor-primary; /* A borda da nossa caixa*/
   background: none; /* tirar o fundo da caixa e ficar transparente*/
-  color: #fff;
+  color: $cor-secundary-2;
   padding: 7px 5px; /* aumentar o padding dentro da caixa*/
   margin-bottom: 10px; /* distancia de uma caixa para outra*/
   outline: none; /* tirar linha de marcação em volta quando escreve*/
-  font-size: 14px;
-  font-family: Georgia, "Times New Roman", serif;
+  @include type-1(14);
 }
 .form textarea {
   display: block;
   width: 100%;
   height: 120px; /* largura da caixa*/
-  border: 4px solid #fec63e;
+  border: 4px solid $cor-primary;
   background: none;
-  color: #fff;
+  color: $cor-secundary-2;
   padding: 7px 5px;
   margin-bottom: 20px;
   outline: none;
-  font-size: 14px;
-  font-family: Georgia, "Times New Roman", serif;
+  @include type-1(14);
 }
 .form button {
   background: none;
   padding: 7px 40px;
 }
 .orcamento_dados {
-  color: #fff;
+  color: $cor-secundary-2;
 }
 .orcamento_dados h3 {
-  font-size: 18px;
-  line-height: 25px;
+  @include type-1(18);
   text-transform: uppercase; /* Trasformar tudo em maisculo*/
-  color: #fec63e;
+  color: $cor-primary;
   font-weight: bold; /* Deixa em negrito*/
 }
 .orcamento_dados span {
   display: block; /* tirar inline e colocar em bloco*/
-  font-size: 18px;
+  @include type-1(18);
   line-height: 30px;
-  font-family: Georgia, "Times New Roman", serif;
 }
 
 .orcamento_dados span:nth-last-of-type(1) {
@@ -140,8 +132,7 @@
   padding-right: 60px; /* diminuir a largura da caixa da lista*/
 }
 .orcamento_dados ul li {
-  font-family: Georgia, "Times New Roman", serif;
-  font-size: 14px;
+  @include type-1(18);
   padding: 10px 10px;
 }
 .orcamento_dados ul li:nth-child(odd) {
