--- a/css/scss/_produtos.scss
+++ b/css/scss/_produtos.scss
@@ -16,6 +16,15 @@
   top: -170px;
   text-align: center;
   margin-bottom: -50px;
+  @include responsivo(t) {
+    top: -150px;
+    margin-bottom: -50px;
+  }
+  @include responsivo(m) {
+    @include type-1(24);
+    top: -100px;
+    margin-bottom: -50px;
+  }
 }
 .produto-item h2::after,
 .produto-item h2::before {
@@ -29,6 +38,12 @@
 .produto-icone {
   background: #000;
   padding: 70px 0;
+  @include responsivo(t) {
+    padding: 41px 0;
+  }
+  @include responsivo(m) {
+    padding: 41px 0;
+  }
 }
 .produto-icone img {
   margin: 0 auto;
@@ -41,6 +56,16 @@
   @include type-1(18);
   padding: 40px 40px;
   height: 180px;
+  @include responsivo(t) {
+    @include type-1(14);
+    padding: 20px 20px;
+    height: 121px;
+  }
+  @include responsivo(m) {
+    @include type-1(14);
+    padding: 20px 20px;
+    height: auto;
+  }
 }
 .produto-info ul li {
   background: $cor-primary;
@@ -52,6 +77,15 @@
   height: 49px;
   text-align: center;
   padding-top: 16px;
+  @include responsivo(t) {
+    width: 181px;
+    height: 49px;
+  }
+  @include responsivo(m) {
+    width: 149px;
+    height: 49px;
+    @include type-1(14);
+  }
 }
 .produto-info ul li:nth-child(1),
 .produto-info ul li:nth-child(2) {
@@ -76,6 +110,9 @@
 }
 .form {
   padding-right: 60px; /*Ter uma distancia de a direita de 60px do outro bloco  */
+  @include responsivo(m) {
+    padding-right: 0px;
+  }
 }
 .form label {
   display: block; /*quebras a label em blocos e ficar uma embaixo da outra*/
@@ -130,6 +167,9 @@
 }
 .orcamento_dados ul {
   padding-right: 60px; /* diminuir a largura da caixa da lista*/
+  @include responsivo(m) {
+    padding-right: 0px;
+  }
 }
 .orcamento_dados ul li {
   @include type-1(18);
